--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
     <link type="text/css" rel="stylesheet" href="../css/styles.css">
@@ -19,16 +20,16 @@
   <body class="w3-light-grey">
 
     <!-- Page Container -->
-    <div class="w3-content w3-margin-top" style="max-width:1400px;">
-      
+    <div class="w3-content w3-margin-top" style="max-width:1300px;">
+
       <!-- The Grid -->
       <div class="w3-row-padding">
         <div id="root"></div>
-    </div>
-    <!-- End Grid -->
+      </div>
+      <!-- End Grid -->
 
-  </div>
-  <!-- End Page Container -->
+    </div>
+    <!-- End Page Container -->
 
     <script src="./bundle.js"></script>
   </body>
