--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
+    <!-- <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection"> -->
     <link type="text/css" rel="stylesheet" href="../css/styles.css">
 
     <script type="text/javascript" src="../js/jquery-3.1.1.min.js"></script>
