--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,18 @@
     <link type="text/css" rel="stylesheet" href="../css/styles.css">
 
     <script type="text/javascript" src="../js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="../js/materialize.min.js"></script>
+    <!-- <script type="text/javascript" src="../js/materialize.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Proyecto NST</title>
   </head>
   <body class="w3-light-grey">
 
+    <div id="root"></div>
     <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1300px;">
 
       <!-- The Grid -->
       <div class="w3-row-padding">
-        <div id="root"></div>
       </div>
       <!-- End Grid -->
 
