--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection"> -->
+    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
     <link type="text/css" rel="stylesheet" href="../css/styles.css">
 
     <script type="text/javascript" src="../js/jquery-3.1.1.min.js"></script>
-    <!-- <script type="text/javascript" src="../js/materialize.min.js"></script> -->
+    <script type="text/javascript" src="../js/materialize.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Proyecto NST</title>
   </head>
   <body class="w3-light-grey">
 
-    <div id="root"></div>
     <!-- Page Container -->
-    <div class="w3-content w3-margin-top" style="max-width:1300px;">
+    <div class="w3-content w3-margin-top" style="max-width:1024px;">
 
       <!-- The Grid -->
-      <div class="w3-row-padding">
-      </div>
+      <div id="root" class="w3-row-padding"></div>
       <!-- End Grid -->
 
     </div>
